--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 html{
     margin: 0;
     padding: 0;
+    width: 100%;
 }
 body{
     margin:0;
     padding: 0;
     font-family: "Open Sans", "PT Sans", sans-serif;
+    width: 100%;
 }
 
 
