--- a/footer.css
+++ b/footer.css
@@ -90,17 +90,20 @@
         max-width: 45%;
     }
     .footerUp{
+        padding-top: 10px;
         background-color: #4e5054;
-        height: 328px;
-        display: flex;
-        justify-content: center;
-        padding-left: 193px;
-        padding-right: 193px;
+        height: auto;
+        display: block;
+        padding-left: 0;
+        padding-right: 0;
+        width: 100%;
         
     }
     .parrafo{
-        width: 200px;
-        margin-right: 50px;
+        width: 80%;
+        margin-right: 0;
+        margin: 0px auto;
+        padding-bottom: 10px;
     }
     .parrafoTitle{
         font-weight: normal;
@@ -140,6 +143,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        
     }
     
     .footerDownP{
@@ -147,16 +151,107 @@
         font-family: "PT Sans";
         font-size: 14px;
         color: #c1c1c1;
-        margin-left: 193px;
+        margin-left: 10px;
     }
     
     .footerDownIcons{
-        width: 168px;
+        
+        width: auto;
         color: white;
         display: flex;
         list-style: none;
         justify-content: center;
-        margin-right: 200px;
-        gap: 27px;
+        margin-right: 20px;
+        gap: 10px;
     }
+}
+@media screen and (481px < width < 1024px){
+    .marcas{
+        height: auto;
+        display: flex;
+        justify-content: space-between;
+        gap: 15px;
+        align-items: center;
+        flex-wrap: wrap;
+        padding: 10px;
+    }
+    .marca{
+        max-width: 45%;
+    }
+    .footerUp{
+        padding-top: 10px;
+        background-color: #4e5054;
+        height: auto;
+        display: block;
+        padding-left: 0;
+        padding-right: 0;
+        width: 100%;
+        
+    }
+    .parrafo{
+        width: 80%;
+        margin-right: 0;
+        margin: 0px auto;
+        padding-bottom: 10px;
+    }
+    .parrafoTitle{
+        font-weight: normal;
+        font-size: 22px;
+        color: white;
+        margin-top: 40px;
+        margin-bottom: 25px;
+    }
+    .parrafoP, .parrafoFecha{
+        font-size: 14px;
+        font-weight: normal;
+        font-family: "PT Sans";
+        color: #c0c0c0;
+    }
+    .parrafoFecha{
+        color: #898989;
+        display: inline;
+    }
+    .parrafoIcon{
+        display: inline;
+        color: #00bac6;
+        font-size: 16px;
+    }
+    .parrafo1Up{
+        border-bottom: 1px solid #5c5c5c;
+    }
+    .contacto{
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        justify-content: start;
+        margin: 0;
+        height: 30px;
+    }
+    .footerDown{
+        background-color: #252225;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        
+    }
+    
+    .footerDownP{
+        margin: 0;
+        font-family: "PT Sans";
+        font-size: 14px;
+        color: #c1c1c1;
+        margin-left: 10px;
+    }
+    
+    .footerDownIcons{
+        
+        width: auto;
+        color: white;
+        display: flex;
+        list-style: none;
+        justify-content: center;
+        margin-right: 20px;
+        gap: 10px;
+    }
+
 }
